--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script  src="./js/array.js"></script>
+    <script  src="./js/helpers.js"></script>
     <script  src="./js/script.js"></script>
     </body>
 </html>
