--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     </head>
     <body class="hero horizontal" onload="loadHero()">
         <div class="box horizontal">
-            <div id="log" class="vertical"></div>
-            <div id="back" class="vertical"></div>
-            <div id="left" class="vertical"></div>
-            <div id="right" class="vertical"></div>
+            <div id="log" class="vertical"></div>   <!--FOR THE TABLES DATA -->
+            <div id="back" class="vertical"></div>  <!--FOR THE FORMS DATA -->
+            <div id="left" class="vertical"></div>  <!--FOR THE IMAGE DATA -->
+            <div id="right" class="vertical"></div> <!--FOR THE WELCOME MESSAGE -->
         </div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script  src="./js/array.js"></script>
-    <script  src="./js/helpers.js"></script>
-    <script  src="./js/script.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> NOT USED -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!--USED FOR POPUP NOTIFICATION-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script> <!--USED FOR CORNER NOTIFICATION-->
+    <script  src="./js/array.js"></script> <!--VARIABLES AND FORMS TYPES/DATA-->
+    <script  src="./js/helpers.js"></script><!--REUSED FUNCTIONS-->
+    <script  src="./js/script.js"></script><!--MAIN APP-->
     </body>
 </html>
