--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
     </head>
     <body class="hero horizontal" onload="loadHero()">
         <div class="box horizontal">
-            <div id="log" class="vertical"></div>   <!--FOR THE TABLES DATA -->
-            <div id="back" class="vertical"></div>  <!--FOR THE FORMS DATA -->
-            <div id="left" class="vertical"></div>  <!--FOR THE IMAGE DATA -->
-            <div id="right" class="vertical"></div> <!--FOR THE WELCOME MESSAGE -->
+            <div id="log" class="vertical"></div>   <!--FOR THE TABLES DATA / PARA TABLA LOG -->
+            <div id="back" class="vertical"></div>  <!--FOR THE FORMS DATA / PARA AREA DE BOTONES-->
+            <div id="left" class="vertical"></div>  <!--FOR THE IMAGE DATA / PARA IMAGEN DE BIENVENIDA-->
+            <div id="right" class="vertical"></div> <!--FOR THE WELCOME MESSAGE / PARA BIENVENIDA-->
         </div>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> NOT USED -->
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!--USED FOR POPUP NOTIFICATION-->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script> <!--USED FOR CORNER NOTIFICATION-->
-    <script  src="./js/array.js"></script> <!--VARIABLES AND FORMS TYPES/DATA-->
-    <script  src="./js/helpers.js"></script><!--REUSED FUNCTIONS-->
-    <script  src="./js/script.js"></script><!--MAIN APP-->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!--USED FOR POPUP NOTIFICATION / PARA NOTIFIACIONES POPUP-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script> <!--USED FOR CORNER NOTIFICATION / PARA NOTIFIACIONES TEMP-->
+    <script  src="./js/array.js"></script> <!--VARIABLES AND FORMS TYPES.DATA / VARIABLES Y DATOS DE FORMULARIOS-->
+    <script  src="./js/helpers.js"></script><!--REUSED FUNCTIONS / FUNCIONES REUSADAS-->
+    <script  src="./js/script.js"></script><!--MAIN APP / APLICACION PRINCIPAL-->
     </body>
 </html>
