--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </head>
     <body class="hero horizontal" onload="loadHero()">
         <div class="box horizontal">
+            <!--Author: Francisco Linares
+                edolinares@gmail.com -->
             <div id="log" class="vertical"></div>   <!--FOR THE TABLES DATA / PARA TABLA LOG -->
             <div id="back" class="vertical"></div>  <!--FOR THE FORMS DATA / PARA AREA DE BOTONES-->
             <div id="left" class="vertical"></div>  <!--FOR THE IMAGE DATA / PARA IMAGEN DE BIENVENIDA-->
