--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <script  src="./js/array.js"></script> <!--VARIABLES AND FORMS TYPES.DATA / VARIABLES Y DATOS DE FORMULARIOS-->
     <script  src="./js/helpers.js"></script><!--REUSED FUNCTIONS / FUNCIONES REUSADAS-->
     <script  src="./js/script.js"></script><!--MAIN APP / APLICACION PRINCIPAL-->
+    <script  src="./js/datamgt.js"></script><!--CLASSES -->
     </body>
 </html>
